--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -372,7 +372,8 @@ bootstrap_executable(
     deps = [
         "//compilerlibs:ocamlcommon",
         "//compilerlibs:ocamloptcomp",
-        "//driver/Optmain"
+        # "//stdlib",
+        "//driver:Optmain"
     ]
 )
 
