--- a/middle_end/BUILD.bazel
+++ b/middle_end/BUILD.bazel
@@ -1,4 +1,5 @@
 load("//bzl:rules.bzl",
+     "bootstrap_archive",
      "bootstrap_library",
      "bootstrap_module",
      "bootstrap_signature",
@@ -32,6 +33,7 @@ bootstrap_library(
     ],
 )
 
+# bootstrap_archive(
 bootstrap_library(
     name = "ocamloptcomp",
     manifest  = [
@@ -77,8 +79,8 @@ bootstrap_signature(
     deps   = STDLIB + [
         ":Symbol", ## (Middle_end Symbol)
         "//middle_end/flambda:Simple_value_approx_cmi",
-        ## (Ident)
-        ## (Closure_id)
+        "//typing:Ident",
+        "//middle_end/flambda/base_types:Closure_id",
     ],
     data = ["//runtime:primitives"],
     visibility = [
@@ -94,14 +96,17 @@ bootstrap_module(
     sig    = "Backend_var_cmi",
     opts = MODULE_OPTS,
     deps   = STDLIB + [
-        ## (Path)
-        ## (Ident)
-        ## (Format)
-        ## (Debuginfo)
-        ## (Clflags)
+        "//typing:Ident",
+        "//typing:Path",
+        "//stdlib:Stdlib.Format",
+        "//lambda:Debuginfo",
+        "//utils:Clflags",
     ],
     data = ["//runtime:primitives"],
-    visibility = ["//middle_end:__subpackages__"]
+    visibility = [
+        "//asmcomp:__subpackages__",
+        "//middle_end:__subpackages__"
+    ]
 )
 
 bootstrap_signature(
@@ -111,7 +116,7 @@ bootstrap_signature(
     deps   = STDLIB + [
         "//typing:Path_cmi",
         "//typing:Ident_cmi",
-        ## (Format)
+        "//stdlib:Stdlib.Format",
         "//lambda:Debuginfo_cmi"
     ],
     data = ["//runtime:primitives"],
@@ -127,13 +132,13 @@ bootstrap_module(
         ":Clambda_primitives", ## (Middle_end Clambda_primitives)
         ":Backend_var", ## (Middle_end Backend_var)
         "//lambda:Debuginfo", ## (Lambda Debuginfo)
-        ## (String)
+        "//stdlib:Stdlib.String",
         ## (Path)
-        ## (Nativeint)
-        ## (Int64)
-        ## (Int32)
-        ## (Ident)
-        ## (Asttypes)
+        "//stdlib:Stdlib.Nativeint",
+        "//stdlib:Stdlib.Int64",
+        "//stdlib:Stdlib.Int32",
+        "//typing:Ident",
+        "//parsing:Asttypes_cmi",
     ],
     data = ["//runtime:primitives"],
     visibility = [
@@ -151,8 +156,8 @@ bootstrap_signature(
         ":Backend_var", ## (Middle_end Backend_var)
         "//lambda:Debuginfo",
         ## (Path)
-        ## (Ident)
-        ## (Asttypes)
+        "//typing:Ident",
+        "//parsing:Asttypes_cmi",
     ],
     data = ["//runtime:primitives"],
     visibility = [
@@ -168,9 +173,10 @@ bootstrap_module(
     sig    = "Clambda_primitives_cmi",
     opts = MODULE_OPTS,
     deps   = STDLIB + [
-        ## (Types)
-        ## (Primitive)
-        ## (Asttypes)
+        "//lambda:Lambda",
+        "//typing:Types",
+        "//typing:Primitive",
+        "//parsing:Asttypes_cmi",
     ],
     data = ["//runtime:primitives"],
     visibility = ["//middle_end:__subpackages__"]
@@ -181,8 +187,8 @@ bootstrap_signature(
     src  = "clambda_primitives.mli",
     opts = SIG_OPTS,
     deps   = STDLIB + [
-        ## (Types)
-        ## (Primitive)
+        "//typing:Types",
+        "//typing:Primitive",
         "//lambda:Lambda_cmi",
         "//parsing:Asttypes_cmi"
     ],
@@ -197,13 +203,13 @@ bootstrap_module(
     opts = MODULE_OPTS,
     deps   = STDLIB + [
         ":Linkage_name", ## (Middle_end Linkage_name)
-        ## (String)
-        ## (Misc)
-        ## (Int_replace_polymorphic_compare)
-        ## (Identifiable)
-        ## (Ident)
-        ## (Hashtbl)
-        ## (Format)
+        "//stdlib:Stdlib.String",
+        "//utils:Misc",
+        "//utils:Int_replace_polymorphic_compare",
+        "//utils:Identifiable",
+        "//typing:Ident",
+        "//stdlib:Stdlib.Hashtbl",
+        "//stdlib:Stdlib.Format",
     ],
     data = ["//runtime:primitives"],
     visibility = ["//middle_end/flambda:__subpackages__"]
@@ -215,7 +221,7 @@ bootstrap_signature(
     opts = SIG_OPTS,
     deps   = STDLIB + [
         ":Linkage_name", ## (Middle_end Linkage_name)
-        ## (Identifiable)
+        "//utils:Identifiable",
         "//typing:Ident_cmi"
     ],
     data = ["//runtime:primitives"],
@@ -235,28 +241,28 @@ bootstrap_module(
         ":Linkage_name", ## (Middle_end Linkage_name)
         ":Compilation_unit", ## (Middle_end Compilation_unit)
         ":Clambda", ## (Middle_end Clambda)
-        ## (Warnings)
-        ## (String)
+        "//utils:Warnings",
+        "//stdlib:Stdlib.String",
         ## (Simple_value_approx)
         ## (Set_of_closures_id)
         ## (Path)
-        ## (Misc)
-        ## (Map)
-        ## (Location)
-        ## (Load_path)
-        ## (List)
-        ## (Int)
-        ## (Ident)
-        ## (Hashtbl)
-        ## (Format)
-        ## (Export_info)
+        "//utils:Misc",
+        "//stdlib:Stdlib.Map",
+        "//parsing:Location",
+        "//utils:Load_path",
+        "//stdlib:Stdlib.List",
+        "//stdlib:Stdlib.Int",
+        "//typing:Ident",
+        "//stdlib:Stdlib.Hashtbl",
+        "//stdlib:Stdlib.Format",
+        "//middle_end/flambda:Export_info",
         ## (Env)
-        ## (Digest)
-        ## (Config)
-        ## (Cmx_format)
-        ## (Closure_id)
-        ## (Clflags)
-        ## (Buffer)
+        "//stdlib:Stdlib.Digest",
+        "//utils:Config",
+        "//file_formats:Cmx_format_cmi",
+        "//middle_end/flambda/base_types:Closure_id",
+        "//utils:Clflags",
+        "//stdlib:Stdlib.Buffer",
     ],
     data = ["//runtime:primitives"],
     visibility = [
@@ -277,12 +283,12 @@ bootstrap_signature(
         ":Clambda_cmi",
         ## (Simple_value_approx)
         ## (Set_of_closures_id)
-        ## (Ident)
-        ## (Format)
+        "//typing:Ident",
+        "//stdlib:Stdlib.Format",
         ## (Export_info)
-        ## (Digest)
-        "//file_formats:Cmx_format_cmi"
-        ## (Closure_id)
+        "//stdlib:Stdlib.Digest",
+        "//file_formats:Cmx_format_cmi",
+        "//middle_end/flambda/base_types:Closure_id",
     ],
     data = ["//runtime:primitives"]
 )
@@ -295,8 +301,8 @@ bootstrap_module(
     deps   = STDLIB + [
         ":Clambda_primitives", ## (Middle_end Clambda_primitives)
         "//lambda:Printlambda",
-        ## (Misc)
-        ## (Asttypes)
+        "//utils:Misc",
+        "//parsing:Asttypes_cmi",
     ],
     data = ["//runtime:primitives"],
     visibility = ["//middle_end:__subpackages__"]
@@ -308,7 +314,7 @@ bootstrap_signature(
     opts = SIG_OPTS,
     deps   = STDLIB + [
         ":Clambda_primitives", ## (Middle_end Clambda_primitives)
-        ## (Asttypes)
+        "//parsing:Asttypes_cmi",
     ],
     data = ["//runtime:primitives"]
 )
@@ -319,11 +325,12 @@ bootstrap_module(
     sig    = "Internal_variable_names_cmi",
     opts = MODULE_OPTS,
     deps   = STDLIB + [
-        ## (Location)
-        ## (Int_replace_polymorphic_compare)
-        ## (Format)
-        ## (Filename)
-        ## (Debuginfo)
+        "//parsing:Location",
+        "//lambda:Lambda",
+        "//utils:Int_replace_polymorphic_compare",
+        "//stdlib:Stdlib.Format",
+        "//stdlib:Stdlib.Filename",
+        "//lambda:Debuginfo",
     ],
     data = ["//runtime:primitives"],
     visibility = ["//middle_end/flambda:__pkg__"]
@@ -348,11 +355,11 @@ bootstrap_module(
     sig    = "Linkage_name_cmi",
     opts = MODULE_OPTS,
     deps   = STDLIB + [
-        ## (String)
-        "//utils:Int_replace_polymorphic_compare"
-        ## (Identifiable)
-        ## (Hashtbl)
-        ## (Format)
+        "//stdlib:Stdlib.String",
+        "//utils:Int_replace_polymorphic_compare",
+        "//utils:Identifiable",
+        "//stdlib:Stdlib.Hashtbl",
+        "//stdlib:Stdlib.Format",
     ],
     data = ["//runtime:primitives"],
     visibility = ["//middle_end/flambda:__pkg__"]
@@ -377,13 +384,13 @@ bootstrap_module(
         ":Printclambda_primitives", ## (Middle_end Printclambda_primitives)
         ":Clambda", ## (Middle_end Clambda)
         ":Backend_var", ## (Middle_end Backend_var)
-        ## (String)
-        ## (Printlambda)
-        ## (List)
-        ## (Ident)
-        ## (Format)
-        ## (Asttypes)
-        ## (Array)
+        "//stdlib:Stdlib.String",
+        "//lambda:Printlambda",
+        "//stdlib:Stdlib.List",
+        "//typing:Ident",
+        "//stdlib:Stdlib.Format",
+        "//parsing:Asttypes_cmi",
+        "//stdlib:Stdlib.Array",
     ],
     data = ["//runtime:primitives"],
     visibility = ["//middle_end:__subpackages__"]
@@ -395,7 +402,7 @@ bootstrap_signature(
     opts = SIG_OPTS,
     deps   = STDLIB + [
         ":Clambda", ## (Middle_end Clambda)
-        ## (Format)
+        "//stdlib:Stdlib.Format",
     ],
     data = ["//runtime:primitives"]
 )
@@ -410,10 +417,10 @@ bootstrap_module(
         "//lambda:Printlambda", ## (Lambda Printlambda)
         "//lambda:Lambda", ## (Lambda Lambda)
         "//lambda:Debuginfo", ## (Lambda Debuginfo)
-        ## (Printf)
-        ## (Primitive)
-        ## (Format)
-        ## (Asttypes)
+        "//stdlib:Stdlib.Printf",
+        "//typing:Primitive",
+        "//stdlib:Stdlib.Format",
+        "//parsing:Asttypes_cmi",
     ],
     data = ["//runtime:primitives"],
     visibility = ["//middle_end/flambda:__pkg__"]
@@ -425,8 +432,8 @@ bootstrap_signature(
     opts = SIG_OPTS,
     deps   = STDLIB + [
         ":Clambda_primitives", ## (Middle_end Clambda_primitives)
-        ## (Format)
-        ## (Asttypes)
+        "//stdlib:Stdlib.Format",
+        "//parsing:Asttypes_cmi",
     ],
     data = ["//runtime:primitives"]
 )
@@ -438,7 +445,7 @@ bootstrap_module(
     opts = MODULE_OPTS,
     deps   = STDLIB + [
         ":Clambda_primitives", ## (Middle_end Clambda_primitives)
-        ## (Asttypes)
+        "//parsing:Asttypes_cmi",
     ],
     data = ["//runtime:primitives"],
     visibility = ["//middle_end:__subpackages__"]
@@ -450,7 +457,7 @@ bootstrap_signature(
     opts = SIG_OPTS,
     deps   = STDLIB + [
         ":Clambda_primitives", ## (Middle_end Clambda_primitives)
-        ## (Asttypes)
+        "//parsing:Asttypes_cmi",
     ],
     data = ["//runtime:primitives"]
 )
@@ -464,10 +471,10 @@ bootstrap_module(
         ":Variable", ## (Middle_end Variable)
         ":Linkage_name", ## (Middle_end Linkage_name)
         ":Compilation_unit", ## (Middle_end Compilation_unit)
-        ## (Misc)
-        ## (Int_replace_polymorphic_compare)
-        ## (Identifiable)
-        ## (Format)
+        "//utils:Misc",
+        "//utils:Int_replace_polymorphic_compare",
+        "//utils:Identifiable",
+        "//stdlib:Stdlib.Format",
     ],
     data = ["//runtime:primitives"],
     visibility = ["//middle_end/flambda:__pkg__"]
@@ -481,8 +488,8 @@ bootstrap_signature(
         ":Variable", ## (Middle_end Variable)
         ":Linkage_name", ## (Middle_end Linkage_name)
         ":Compilation_unit", ## (Middle_end Compilation_unit)
-        ## (Identifiable)
-        ## (Format)
+        "//utils:Identifiable",
+        "//stdlib:Stdlib.Format",
     ],
     data = ["//runtime:primitives"],
     visibility = ["//middle_end/flambda:__pkg__"]
@@ -497,13 +504,13 @@ bootstrap_module(
         ":Internal_variable_names", ## (Middle_end Internal_variable_names)
         ":Compilation_unit", ## (Middle_end Compilation_unit)
         ## (T)
-        ## (Misc)
-        ## (List)
-        ## (Int_replace_polymorphic_compare)
-        ## (Int)
-        ## (Identifiable)
-        ## (Ident)
-        ## (Format)
+        "//utils:Misc",
+        "//stdlib:Stdlib.List",
+        "//utils:Int_replace_polymorphic_compare",
+        "//stdlib:Stdlib.Int",
+        "//utils:Identifiable",
+        "//typing:Ident",
+        "//stdlib:Stdlib.Format",
     ],
     data = ["//runtime:primitives"],
     visibility = ["//middle_end/flambda:__subpackages__"]
@@ -516,9 +523,9 @@ bootstrap_signature(
     deps   = STDLIB + [
         ":Internal_variable_names", ## (Middle_end Internal_variable_names)
         ":Compilation_unit", ## (Middle_end Compilation_unit)
-        ## (Identifiable)
-        ## (Ident)
-        ## (Format)
+        "//utils:Identifiable",
+        "//typing:Ident",
+        "//stdlib:Stdlib.Format",
     ],
     data = ["//runtime:primitives"],
     visibility = ["//middle_end/flambda:__subpackages__"]
