--- a/otherlibs/dynlink/byte/BUILD.bazel
+++ b/otherlibs/dynlink/byte/BUILD.bazel
@@ -21,23 +21,23 @@ ocaml_module(
     deps   = [
         ":Dynlink", ## (Otherlibs Dynlink Dynlink_types)
         ":Dynlink", ## (Otherlibs Dynlink Dynlink_common)
-        ## (Sys)
+        "//stdlib:Stdlib.Sys",
         ## (Symtable)
-        ## (String)
-        ## (Printexc)
+        "//stdlib:Stdlib.String",
+        "//stdlib:Stdlib.Printexc",
         ## (Opcodes)
-        ## (Obj)
-        ## (Misc)
+        "//stdlib:Stdlib.Obj",
+        "//utils:Misc",
         ## (Meta)
         ## (LongString)
-        ## (List)
-        ## (Ident)
+        "//stdlib:Stdlib.List",
+        "//typing:Ident",
         ## (Dynlink_compilerlibs)
         ## (Dll)
-        ## (Digest)
-        ## (Config)
+        "//stdlib:Stdlib.Digest",
+        "//utils:Config",
         ## (Cmo_format)
-        ## (Char)
+        "//stdlib:Stdlib.Char",
     ]
 )
 
