--- a/tools/unlabel-patches/BUILD.bazel
+++ b/tools/unlabel-patches/BUILD.bazel
@@ -22,7 +22,7 @@ ocaml_signature(
     src  = "1.mli",
     opts = SIG_OPTS,
     deps   = [
-        ## (Hashtbl)
+        "//stdlib:Stdlib.Hashtbl",
     ]
 )
 
@@ -31,7 +31,7 @@ ocaml_signature(
     src  = "2.mli",
     opts = SIG_OPTS,
     deps   = [
-        ## (Hashtbl)
+        "//stdlib:Stdlib.Hashtbl",
     ]
 )
 
@@ -40,7 +40,7 @@ ocaml_signature(
     src  = "3.mli",
     opts = SIG_OPTS,
     deps   = [
-        ## (Map)
+        "//stdlib:Stdlib.Map",
     ]
 )
 
@@ -49,7 +49,7 @@ ocaml_signature(
     src  = "4.mli",
     opts = SIG_OPTS,
     deps   = [
-        ## (Set)
+        "//stdlib:Stdlib.Set",
     ]
 )
 
